--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -113,7 +113,7 @@ body {
 }
 
 .featured-card {
-  background: rgba(255, 255, 255, 0.9);
+  var(--primary-white), var(--primary-red), var(--primary-yellow);
   border-radius: 8px;
   padding: 15px;
   margin-bottom: 15px;
@@ -162,20 +162,20 @@ body {
 
 .vs {
   font-weight: bold;
-  color: var(--primary-red);
+  color: var(--primary-white);
   font-size: 1.2rem;
 }
 
 .match-info {
   display: flex;
   justify-content: space-between;
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   color: #555;
 }
 
 .match-info i {
   margin-left: 5px;
-  color: var(--primary-red);
+  color: var(--primary-white);
 }
 
 /* تنسيق المباريات المنقولة */
