--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -113,7 +113,7 @@ body {
 }
 
 .featured-card {
- background: var(--primary-white), var(--primary-red), var(--primary-yellow);
+ background: var(--primary-white), var(--primary-pink), var(--primary-yellow);
   border-radius: 8px;
   padding: 15px;
   margin-bottom: 15px;
