--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -193,7 +193,7 @@ body {
 }
 
 .broadcast-card {
-  background: rgba(255, 255, 255, 0.9);
+  background: var(--primary-white), var(--primary-yellow);
   border-radius: 8px;
   padding: 15px;
   display: flex;
