--- a/assets/css/matches.css
+++ b/assets/css/matches.css
@@ -9,7 +9,7 @@
 
 /* التنسيق العام */
 body {
-  font-family: 'Tajawal', sans-serif;
+  font-family: 'IBM Plex Sans Arabic', sans-serif;
   background: linear-gradient(135deg, var(--primary-red), var(--primary-yellow));
   margin: 0;
   padding-top: var(--header-height);
@@ -113,7 +113,7 @@ body {
 }
 
 .featured-card {
- background: var(--primary-white), var(--primary-pink), var(--primary-yellow);
+ background: var(--primary-white),  var(--primary-yellow);
   border-radius: 8px;
   padding: 15px;
   margin-bottom: 15px;
