--- a/assets/css/news.css
+++ b/assets/css/news.css
@@ -58,11 +58,11 @@ body {
   color: var(--text-white);
   text-position: center;
   margin: 0;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
   text-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
 }
 h2 {
-   color: var(--text-white);
+   color: var(--primary-white);
 }
 .nav ul {
   display: flex;
